@@ -1,3 +1,9 @@
+2008-09-15  Dan Williams  <dcbw@redhat.com>
+
+	* src/gconf-helpers/gconf-helpers.c
+		- (nm_gconf_get_stringhash_helper, write_properties_stringhash): do not
+			read or write empty values (partial fix for bgo #553465)
+
 2008-09-22  Tambet Ingo  <tambet@gmail.com>
 
 	* src/applet.c (make_vpn_failure_message): Handle login failure.
